# apple-music-rip

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
app/: routes.py
app/static/: style.css
app/templates/: index.html  settings.html
apple-music-downloader/: config.yaml  go.mod  go.sum  main.go
apps/apple-music-downloader/: .gitignore  config.example.yaml
apps/web/: README.md  astro.config.mjs  components.json  package.json
apps/web/.astro/: settings.json
apps/web/scripts/: dev.ts
apps/web/server/: index.ts
apps/web/src/components/app/: App.tsx  SettingsApp.tsx  ThemeToggle.tsx
apps/web/src/pages/: index.astro  settings.astro
apps/web/src/styles/: global.css
apps/wrapper/: CMakeLists.txt  README.md  cmdline.h  import.h  wrapper.ggo
apps/wrapper/.github/workflows/: build.yml
scripts/: amd-upstream.sh  wrapper-upstream.sh
wrapper/: CMakeLists.txt  README.md  cmdline.c  cmdline.h  main.c
wrapper/.github/workflows/: build.yml  wrapper-qemu.yml
wrapper/cjson/: cjson.c
wrapper/scripts/: build.sh  wrapper-docker.sh
